feat(server): 사용가능한내쿠폰목록 api #238
